--- a/DiceRoller WatchKit App/Base.lproj/Interface.storyboard
+++ b/DiceRoller WatchKit App/Base.lproj/Interface.storyboard
@@ -139,6 +139,9 @@
                                         <segue destination="M0W-pr-36P" kind="push" id="kF2-E0-CEq"/>
                                     </connections>
                                 </button>
+                                <label width="1" alignment="left" text="Mode: Roll" textAlignment="center" id="66F-sk-NBN">
+                                    <color key="textColor" red="0.50196081400000003" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                </label>
                                 <table alignment="left" id="FQm-dZ-qQA">
                                     <items>
                                         <tableRow identifier="cell" id="wYH-Lk-Ozr" customClass="rollRow" customModule="DiceRoller_WatchKit_Extension">
@@ -164,7 +167,27 @@
                             </items>
                         </group>
                     </items>
+                    <menu key="menu" id="lTJ-gn-nqq">
+                        <items>
+                            <menuItem title="Roll" icon="play" id="BHb-Zh-9WR">
+                                <connections>
+                                    <action selector="rollContextButtonPressed" destination="3Rn-c2-cXF" id="A9y-kF-cuZ"/>
+                                </connections>
+                            </menuItem>
+                            <menuItem title="Edit" icon="more" id="PJ1-2I-YVs">
+                                <connections>
+                                    <action selector="editContextButtonPressed" destination="3Rn-c2-cXF" id="Y8U-Yg-9D4"/>
+                                </connections>
+                            </menuItem>
+                            <menuItem title="Delete" icon="trash" id="KJP-Yg-vRV">
+                                <connections>
+                                    <action selector="deleteContextButtonPressed" destination="3Rn-c2-cXF" id="6ZX-hf-h1n"/>
+                                </connections>
+                            </menuItem>
+                        </items>
+                    </menu>
                     <connections>
+                        <outlet property="theModeLabel" destination="66F-sk-NBN" id="XD2-hs-8h9"/>
                         <outlet property="theTable" destination="FQm-dZ-qQA" id="zP6-g1-oIq"/>
                     </connections>
                 </controller>
